--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "jalali-moment": "^3.3.11",
     "rxjs": "~7.8.0",
+    "tailwind-scrollbar": "^3.0.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
