--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@angular/service-worker": "^17.0.0",
     "jalali-moment": "^3.3.11",
     "rxjs": "~7.8.0",
     "tailwind-scrollbar": "^3.0.5",
