--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "ng deploy"
   },
   "private": true,
   "dependencies": {
@@ -30,6 +31,7 @@
     "@angular/cli": "^17.0.1",
     "@angular/compiler-cli": "^17.0.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^1.0.6",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.1.0",
     "jasmine-core": "~5.1.0",
