--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng deploy --base-href=https://sayheymirza.github.io/daily-report/"
+    "deploy": "rm -rf dist && ng build --base-href=https://sayheymirza.github.io/daily-report/ && mv dist/daily-report/browser/* dist/daily-report && ng deploy --no-build"
   },
   "private": true,
   "dependencies": {
